Modification de la gestion des CORS